--- a/src/background.html
+++ b/src/background.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <script type="module" src="/lib/browser-polyfill.min.js"></script>
         <script type="module" src="./util/messages.js"></script>
         <script type="module" src="./background.js"></script>
     </head>
