--- a/src/options/options.html
+++ b/src/options/options.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <script type="module" src="/lib/browser-polyfill.min.js"></script>
         <script type="module" src="options.js"></script>
         <style>
             .panel {
