Better error handling

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -14,7 +14,11 @@
     </head>
     <body>
         <div class="panel browser-style">
-            Helper messages have been updated.<br>You may need to reload open tabs in order for the change to take effect.<br><br>
+            <span id="popupMessage">
+                <b>Error: Popup message was not changed from default.</b><br>
+                Internal extension communication is not possible! Try disabling the extension and enabling it again.<br>
+                If the issue persists, try restarting your browser.
+            </span><br><br>
             <button class="browser-style dismiss-button">Dismiss</button>
         </div>
     </body>
