--- a/src/options/options.html
+++ b/src/options/options.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <script type="module" src="/lib/browser-polyfill.min.js"></script>
-        <script type="module" src="options.js"></script>
+        <script type="module" src="./options.js"></script>
         <style>
             .panel {
                 padding: 2em;
