--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -5,20 +5,39 @@
         <script type="module" src="/lib/browser-polyfill.min.js"></script>
         <script type="module" src="./popup.js"></script>
         <style>
+            body {
+                min-width: 400px;
+                max-width: 800px;
+                max-height: 600px;
+            }
+
             .panel {
                 margin: 2em;
                 font-family: sans-serif;
                 text-align: center;
             }
+
+            #popupMessage {
+                text-align: center;
+                margin-bottom: 2em;
+            }
+
+            pre {
+                overflow-x: auto;
+                border: 1px solid #aaa;
+                border-radius: 3px;
+                padding: 1em;
+                background-color: #eee;
+            }
         </style>
     </head>
     <body>
         <div class="panel browser-style">
-            <span id="popupMessage">
+            <div id="popupMessage">
                 <b>Error: Popup message was not changed from default.</b><br>
                 Internal extension communication is not possible! Try disabling the extension and enabling it again.<br>
                 If the issue persists, try restarting your browser.
-            </span><br><br>
+            </div>
             <button class="browser-style dismiss-button">Dismiss</button>
         </div>
     </body>
