Add postpone button warning/disabling option

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -62,6 +62,13 @@
                 <input class=browser-style id=prefix name=prefix type=text>
             </div>
 
+            <div class="group browser-style">
+                <label for=postpone>Postpone button</label><br>
+                <input id=postponeHide name=postpone type=radio><label for=postponeHide>Hide the Postpone button</label><br>
+                <input id=postponeWarn name=postpone type=radio><label for=postponeWarn>Show a warning when clicking the Postpone button</label><br>
+                <input id=postponeNone name=postpone type=radio><label for=postponeNone>Postpone the issue immediately when clicking the Postpone button</label><br>
+            </div>
+
             <div class=group>
                 <b>Select messages source</b>
             </div>
