--- a/src/options/options.html
+++ b/src/options/options.html
@@ -19,7 +19,7 @@
                 margin-bottom: 1em;
             }
 
-            textarea, #url {
+            textarea, .textinput {
                 width: 100%;
             }
 
@@ -59,7 +59,7 @@
             
             <div class="group browser-style">
                 <label for=prefix>Shortcut prefix</label><br>
-                <input class=browser-style id=prefix name=prefix type=text>
+                <input class="browser-style textinput" id=prefix name=prefix type=text>
             </div>
 
             <div class="group browser-style">
@@ -108,6 +108,21 @@
                 <textarea class=browser-style id=custom-messages></textarea><br>
                 <button class=browser-style id=save-custom-messages>Save custom messages</button><br>
                 <small id="custom-messages-feedback" class="hidden">test</small>
+            </div>
+
+            <div class=group>
+                <b>Advanced settings</b>
+            </div>
+
+            <div class="group browser-style">
+                <input id=commit-updates name=commit-updates type=checkbox>
+                <label for=commit-updates>Enable commit updates</label><br>
+            </div>
+            <div id=commit-subpanel class="subpanel browser-style">
+                <div class="group browser-style">
+                    <label for=commit-url>Commits URL</label><br>
+                    <input class="browser-style textinput" id=commit-url name=commit-url type=text>
+                </div>
             </div>
         </div>
     </body>
